# python-thingiverse

./: .coverage  .gitignore  CHANGELOG.MD  CHANGELOG.md  Makefile  README.md  print_requirements.py  pyproject.toml  requirements.txt  search_res.json  search_res_two.json  search_tag.json  search_term.json  setup.py  tox.ini
.github/workflows/: development.yaml  main.yaml  poetry.yaml  publish-to-test-pypi.yml
docs/: index.html
docs/types/: exceptions.html  index.html  search.html  users.html
sample_responses/: search_tag.json  search_term.json  thing_922740.json  thing_images_922740.json  thing_images_922740_large_preview.json
sample_responses/users/: me.json
src/python_thingiverse.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/thingiverse/: __init__.py
src/thingiverse/types/: search.py
tests/: test_client.py  test_python_thingiverse.py  test_users.py
thingiverse/: __init__.py
thingiverse/types/: exceptions.py  search.py  users.py
