[tool.poetry]
name = "python-thingiverse"
version = "0.0.6rc1.dev"
readme = "README.md"
documentation = "https://garciajg.github.io/python-thingiverse/"
homepage = "https://garciajg.github.io/python-thingiverse/"
repository = "https://github.com/garciajg/python-thingiverse"
description = "A Python Thingiverse REST API wrapper"
keywords = ["thingiverse", "wrapper"]
authors = ["Jose Garcia <maton.pg@gmail.com>"]
packages = [
    { include = "thingiverse" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"
python-box = "^5.4.1"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
python-dotenv = "^0.19.2"
pdoc3 = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
