[tool.poetry]
name = "python-thingiverse"
version = "0.0.6rc1.dev"
readme = "README.md"
documentation = "https://garciajg.github.io/python-thingiverse/"
homepage = "https://garciajg.github.io/python-thingiverse/"
repository = "https://github.com/garciajg/python-thingiverse"
description = "A Python Thingiverse REST API wrapper"
keywords = ["thingiverse", "wrapper"]
authors = ["Jose Garcia <maton.pg@gmail.com>"]
packages = [
    { include = "thingiverse" }
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.27.1"
python-box = "5.4.1"
pytest = "7.0.0"
pytest-cov = "3.0.0"
tox = "3.24.5"
python-dotenv = "0.19.2"
pdoc3 = "0.10.0"
attrs = "21.4.0"
certifi = "2021.10.8"
charset-normalizer = "2.0.11"
coverage = "6.3.1"
distlib = "0.3.4"
filelock = "3.4.2"
idna = "3.3"
iniconfig = "1.1.1"
Mako = "1.1.6"
Markdown = "3.3.6"
MarkupSafe = "2.0.1"
mypy = "0.931"
mypy-extensions = "0.4.3"
nose = "1.3.7"
packaging = "21.3"
platformdirs = "2.5.0"
pluggy = "1.0.0"
py = "1.11.0"
pyparsing = "3.0.7"
six = "1.16.0"
toml = "0.10.2"
tomli = "2.0.1"
types-requests = "2.27.9"
types-urllib3 = "1.26.9"
typing-extensions = "4.0.1"
urllib3 = "1.26.8"
virtualenv = "20.13.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
